force-app/main/default/objects/TubeEndsGroup__c/TubeEndsGroup__c.object-meta.xml
<CustomObject>
    <label>Tube Ends Group</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tube Ends Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>