force-app/main/default/objects/TubeEndsGroup__c/fields/Classifier__c.field-meta.xml
<CustomField>
    <fullName>Classifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products Classifier</label>
    <referenceTo>ProductsClassifier__c</referenceTo>
    <relationshipLabel>Tube Ends Groups</relationshipLabel>
    <relationshipName>Tube_Ends_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>