force-app/main/default/objects/TubeEndsGroup__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tube Ends Groups</relationshipLabel>
    <relationshipName>Tube_Ends_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>