force-app/main/default/objects/TubeEndsGroup__c/fields/TubeEndsGroup__c.field-meta.xml
<CustomField>
    <fullName>TubeEndsGroup__c</fullName>
    <label>Tube Ends Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TubeEndsGroups</valueSetName>
    </valueSet>
</CustomField>