force-app/main/default/objects/TubeEndsGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TubeEndsGroup__c</columns>
    <columns>Classifier__c</columns>
    <columns>Product__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>